- added making header smaller on mobile - added blur transition on load - fixed background color of body - marginal improvement of loading indicator

--- a/Tiptup300.DeweeseDotDev.WebApp/Components/App.razor.css
+++ b/Tiptup300.DeweeseDotDev.WebApp/Components/App.razor.css
@@ -8,6 +8,11 @@
     }
 }
 
+div.main-container {
+    filter: blur(4px);
+    transition: filter 1s cubic-bezier(0.02, 0.93, 0.46, 0.86);
+}
+
 @media screen {
     ::ng-deep .ng-fa-icon {
         margin: 0.25rem;
