--- a/Tiptup300.DeweeseDotDev.WebApp/Components/Site/Header.razor.css
+++ b/Tiptup300.DeweeseDotDev.WebApp/Components/Site/Header.razor.css
@@ -21,10 +21,20 @@
     }
 
         header h1 {
-            font-size: 4.25rem;
+            font-size: 2.25rem;
             font-weight: 50;
             text-shadow: 1px 1px 0 hsl(0deg 0% 100% / 35%), 0 0.125rem 0.125rem hsl(0deg 0% 0% / 22%);
+            margin-top: 0.25rem;
         }
+
+        @media (min-width: 768px) {
+            header h1 {
+                font-size: 4.25rem;
+                margin-top: 0;
+            }
+        }
+
+        
 
     @media (min-width: 0px) {
         .list-contact {
@@ -80,7 +90,7 @@
         }
 
             .list-contact-item:not(:last-child)::after {
-                content: " |";
+                content: " ";
                 margin: 0.75rem;
                 font-size: 1em;
                 color: grey;
