--- a/Tiptup300.DeweeseDotDev.WebApp/wwwroot/css/blazor.css
+++ b/Tiptup300.DeweeseDotDev.WebApp/wwwroot/css/blazor.css
@@ -40,38 +40,43 @@
         content: "An error has occurred."
     }
 
+#loading {
+    height:100vh;
+    display: flex;
+}
+
+
+
+.load-circle {
+    margin: auto;
+    background-image: linear-gradient(45deg, hsl(0deg 0% 51%), hsl(0deg 0% 100%));
+    padding: 0.55rem;
+    border-radius: 100%;
+    border: 1px solid rgba(255, 255, 255, 50%);
+    overflow: hidden;
+}
+
 .loading-progress {
     position: relative;
     display: block;
     width: 8rem;
     height: 8rem;
-    margin: 20vh auto 1rem auto;
 }
 
     .loading-progress circle {
         fill: none;
-        stroke: #e0e0e0;
-        stroke-width: 0.6rem;
+        stroke: rgba(0, 0,0, 50%);
+        stroke-width: 1rem;
+        border: 0.25rem solid white;
         transform-origin: 50% 50%;
         transform: rotate(-90deg);
     }
 
         .loading-progress circle:last-child {
-            stroke: #1b6ec2;
+            stroke: rgb(255, 45, 149);
             stroke-dasharray: calc(3.141 * var(--blazor-load-percentage, 0%) * 0.8), 500%;
             transition: stroke-dasharray 0.05s ease-in-out;
         }
-
-.loading-progress-text {
-    position: absolute;
-    text-align: center;
-    font-weight: bold;
-    inset: calc(20vh + 3.25rem) 0 auto 0.2rem;
-}
-
-    .loading-progress-text:after {
-        content: var(--blazor-load-percentage-text, "Loading");
-    }
 
 code {
     color: #c02d76;
